--- a/.gitignore
+++ b/.gitignore
@@ -1,54 +1,40 @@
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
-# Dependencies
+# dependencies
 /node_modules
 /.pnp
 .pnp.js
 .yarn/install-state.gz
 
-# Temporary files
-.DS_Store
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-package-lock.json
-yarn.lock
+# testing
+/coverage
 
-# IDEs and editors
-.idea
-.vscode/*
-!.vscode/settings.json
-!.vscode/tasks.json
-!.vscode/launch.json
-!.vscode/extensions.json
-*.sublime-project
-*.sublime-workspace
-
-# Next.js
+# next.js
 /.next/
 /out/
 
-# Turborepo
-.turbo
-
-# Environment variables
-.env
-.env*.local
-.env.development.local
-.env.test.local
-.env.production.local
-!example.env # if you have an example env file
-
-# Production
+# production
 /build
 
-# Misc
-.npm
-.eslintcache
-coverage
-*.tgz
+# misc
+.DS_Store
+*.pem
 
-# Firebase
-firebase-debug.log
-firebase-debug.*.log
+# debug
+npm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+# local env files
+.env*.local
+.env
+
+# vercel
+.vercel
+
+# typescript
+*.tsbuildinfo
+next-env.d.ts
+
+# genkit
+.genkit/log/
+.genkit/trace/
